@@ -39,10 +39,13 @@ https://www.apache.org/licenses/LICENSE-2.0.html
 
 Simple Chess Clock was created in 2010 by Carter Dewey.
 Simen Heggestøyl is maintaining the app since 2019.
-Norwegian Bokmål translation by Simen Heggestøyl and Allan Nordhøy.
-French translation by Sitavi.
-German translation by Petra Mirelli.
-Spanish translation by Daniel Garcia Pallaviccini (tlacuilo@tlacuilo.biz).
-Turkish translation by Alparslan Şakçi.
-Italian translation by eUgEntOptIc44.
-Code contributions by skyhelix and Yuhui Su.
+
+- Code contributions by skyhelix and Yuhui Su.
+
+- French translation by Sitavi.
+- German translation by Petra Mirelli.
+- Italian translation by eUgEntOptIc44.
+- Norwegian Bokmål translation by Simen Heggestøyl and Allan Nordhøy.
+- Spanish translation by Daniel Garcia Pallaviccini (tlacuilo@tlacuilo.biz) and
+  eUgEntOptIc44.
+- Turkish translation by Alparslan Şakçi.
