@@ -41,4 +41,5 @@
     <item>Minutos</item>
     <item>Horas</item>
   </string-array>
+  <string name="delay_capped_fischer">Capped Fischer</string>
 </resources>
