@@ -53,4 +53,5 @@
     <item>Minutes</item>
     <item>Heures</item>
   </string-array>
+  <string name="delay_capped_fischer">Capped Fischer</string>
 </resources>
