@@ -1,3 +1,7 @@
+*** ?.?.? (TBD)
+    - Fixed "None" option text in the English version of the app.
+    - Updated translations: French, Italian, and Spanish.
+
 *** 2.11.1 (2022-05-07)
     - The app no longer requires a special wake lock permission for keeping the
       screen turned on, but uses another technique instead which might also
